scripts/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    networking.gke.io/managed-certificates: backend-cert
spec:
  rules:
    - host: ohiosite.turnball.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
